Updated NetishHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -551,11 +551,23 @@
                                         </div>
                                         <p></p>
                                         <div><a href="payroll_payitems.html">Pay Items</a>
-                                            <div class="small">Pay Items</div>
+                                            <div class="small">Items to be calculated in salary</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payitemassignment.html">Pay Item Assignment</a>
-                                            <div class="small">Pay Item Assignment</div>
+                                        <div><a href="payroll_payslipitems.html">Payslip Items</a>
+                                            <div class="small">Items to be shown on payslip</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="payroll_payslips.html">Paysets</a>
+                                            <div class="small">Create paysets with pay items</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="payroll_payslips.html">Payslips</a>
+                                            <div class="small">Create payslip with payslip items</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="payroll_payassignment.html">Payset/payslip assignment</a>
+                                            <div class="small">Assign payset and payslip to a person</div>
                                         </div>
                                     </div>
 
