--- a/netishr/payroll_payslips.html
+++ b/netishr/payroll_payslips.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR | Payslip Items </title>
+    <title>NetisHR | Payslips </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -397,7 +397,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Payslip Items</h2>
+                            <h2>Payslips</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -409,7 +409,7 @@
                                     <a>Remuneration</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Payslip Items</strong>
+                                    <strong>Payslips</strong>
                                 </li>
                             </ol>
                         </div>
@@ -441,7 +441,7 @@
                                                     <div class="panel-body">
 
 
-                                                        <a href="payroll_payslipitems_new.html" class="btn btn-primary btn-xs">New payslip item</a>
+                                                        <a href="payroll_payslips_new.html" class="btn btn-primary btn-xs">New payslip</a>
 
                                                         <div class="row">
                                                             <div class="col-sm-12">
@@ -452,9 +452,8 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Payslip Item Type</th>
                                                                                 <th data-hide="all">Description</th>
-                                                                                <th data-hide="all">Pay item(s)</th>
+                                                                                <th data-hide="all">Payslip item(s)</th>
                                                                                 <th></th>
 
                                                                             </tr>
@@ -463,7 +462,6 @@
                                                                             <tr>
                                                                                 <td>GP_I</td>
                                                                                 <td>Gaji Pokok</td>
-                                                                                <td>Income</td>
                                                                                 <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                                 <td>
                                                                                     BS_W - Basic Salary, TLK_A - Tunjangan Luar Kota, L_A - Lembur, TKH_A - Tunjangan Kemahalan
@@ -483,7 +481,6 @@
                                                                             <tr>
                                                                                 <td>TKOM_I</td>
                                                                                 <td>Tunjangan Komunikasi</td>
-                                                                                <td>Income</td>
                                                                                 <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
                                                                                 <td>
 
@@ -530,7 +527,6 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Payslip Item Type</th>
                                                                                 <th data-hide="all">Description</th>
                                                                                 <th data-hide="all">Pay item(s)</th>
                                                                                 <th></th>
@@ -541,7 +537,6 @@
                                                                             <tr>
                                                                                 <td>GP_I</td>
                                                                                 <td>Gaji Pokok</td>
-                                                                                <td>Income</td>
                                                                                 <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                                 <td>
                                                                                     BS_W - Basic Salary, L_A - Lembur, TL_A - Tunjangan Lembur
@@ -561,7 +556,6 @@
                                                                             <tr>
                                                                                 <td>TKOM_I</td>
                                                                                 <td>Tunjangan Komunikasi</td>
-                                                                                <td>Income</td>
                                                                                 <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
                                                                                 <td>
                                                                                     BS_W - Basic Salary, THDR_A - Tunjangan Kehadiran, L_A - Lembur, TL_A - Tunjangan Lembur
