--- a/netishr/payroll_paysets.html
+++ b/netishr/payroll_paysets.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR | Payslip Items </title>
+    <title>NetisHR | Paysets </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -397,7 +397,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Payslip Items</h2>
+                            <h2>Paysets</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -409,7 +409,7 @@
                                     <a>Remuneration</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Payslip Items</strong>
+                                    <strong>Paysets</strong>
                                 </li>
                             </ol>
                         </div>
@@ -441,7 +441,7 @@
                                                     <div class="panel-body">
 
 
-                                                        <a href="payroll_payslipitems_new.html" class="btn btn-primary btn-xs">New payslip item</a>
+                                                        <a href="payroll_paysets_new.html" class="btn btn-primary btn-xs">New payset</a>
 
                                                         <div class="row">
                                                             <div class="col-sm-12">
@@ -452,18 +452,16 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Payslip Item Type</th>
                                                                                 <th data-hide="all">Description</th>
-                                                                                <th data-hide="all">Pay item(s)</th>
+                                                                                <th data-hide="all">Payslip item(s)</th>
                                                                                 <th></th>
 
                                                                             </tr>
                                                                         </thead>
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td>GP_I</td>
-                                                                                <td>Gaji Pokok</td>
-                                                                                <td>Income</td>
+                                                                                <td>STD</td>
+                                                                                <td>Standard Payset</td>
                                                                                 <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                                 <td>
                                                                                     BS_W - Basic Salary, TLK_A - Tunjangan Luar Kota, L_A - Lembur, TKH_A - Tunjangan Kemahalan
@@ -481,9 +479,8 @@
                                                                                 </td>
                                                                             </tr>
                                                                             <tr>
-                                                                                <td>TKOM_I</td>
-                                                                                <td>Tunjangan Komunikasi</td>
-                                                                                <td>Income</td>
+                                                                                <td>FRL</td>
+                                                                                <td>Freelance Payset</td>
                                                                                 <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
                                                                                 <td>
 
@@ -530,7 +527,6 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Payslip Item Type</th>
                                                                                 <th data-hide="all">Description</th>
                                                                                 <th data-hide="all">Pay item(s)</th>
                                                                                 <th></th>
@@ -539,9 +535,8 @@
                                                                         </thead>
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td>GP_I</td>
-                                                                                <td>Gaji Pokok</td>
-                                                                                <td>Income</td>
+                                                                                <td>PRT</td>
+                                                                                <td>Part-timer payset</td>
                                                                                 <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                                 <td>
                                                                                     BS_W - Basic Salary, L_A - Lembur, TL_A - Tunjangan Lembur
@@ -555,26 +550,6 @@
                                                                                             <button class="btn-white btn btn-xs">Delete</button>
                                                                                         </div>
 
-                                                                                    </td>
-                                                                                </td>
-                                                                            </tr>
-                                                                            <tr>
-                                                                                <td>TKOM_I</td>
-                                                                                <td>Tunjangan Komunikasi</td>
-                                                                                <td>Income</td>
-                                                                                <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
-                                                                                <td>
-                                                                                    BS_W - Basic Salary, THDR_A - Tunjangan Kehadiran, L_A - Lembur, TL_A - Tunjangan Lembur
-                                                                                </td>
-                                                                                <td>
-                                                                                    <td class="text-right">
-                                                                                        <div class="btn-group">
-                                                                                            <button class="btn-white btn btn-xs">Archive</button>
-                                                                                        </div>
-
-                                                                                        <div class="btn-group">
-                                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                                        </div>
                                                                                     </td>
                                                                                 </td>
                                                                             </tr>
