--- a/netishr/applicants.html
+++ b/netishr/applicants.html
@@ -106,15 +106,15 @@
                         <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="persons.html">Staffs</a></li>
-                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="#">Manpower Planning</a></li>
-                            <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Selection Process</a></li>
+                            <li><a href="manpowerplanning.html">Manpower Planning</a></li>
+                            <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
+                            <li><a href="selectionprocess.html">Selection Process</a></li>
+                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -149,18 +149,14 @@
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">Competency</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
                                 </ul>
                             </li>
-                            <li><a href="#">Performance Information</a></li>
+                            <li><a href="performance_information.html">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
@@ -261,7 +257,7 @@
                         <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                         <form role="search" class="navbar-form-custom" action="search_results.html">
                             <div class="form-group">
-                                <input type="text" placeholder="Cari..." class="form-control" name="top-search" id="top-search">
+                                <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
                             </div>
                         </form>
                     </div>
@@ -406,7 +402,9 @@
                                 </span>
                                 </div>
                                 <br>
-                                <a href="persons_profile.html"><button type="button" class="btn btn-primary btn-xs">New Person</button></a>
+                                <a href="persons_profile.html">
+                                    <button type="button" class="btn btn-primary btn-xs">New Person</button>
+                                </a>
                                 <div class="clients-list">
                                     <ul class="nav nav-tabs">
                                         <span class="pull-right small text-muted">16 persons</span>
