--- a/netishr/organisation_units.html
+++ b/netishr/organisation_units.html
@@ -100,15 +100,15 @@
                         <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="persons.html">Staffs</a></li>
-                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="#">Manpower Planning</a></li>
-                            <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Selection Process</a></li>
+                            <li><a href="manpowerplanning.html">Manpower Planning</a></li>
+                            <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
+                            <li><a href="selectionprocess.html">Selection Process</a></li>
+                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -143,18 +143,14 @@
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">Competency</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
                                 </ul>
                             </li>
-                            <li><a href="#">Performance Information</a></li>
+                            <li><a href="performance_information.html">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
