--- a/netishr/payroll_payslipitems_new.html
+++ b/netishr/payroll_payslipitems_new.html
@@ -147,18 +147,14 @@
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">Competency</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
                                 </ul>
                             </li>
-                            <li><a href="#">Performance Information</a></li>
+                            <li><a href="performance_information.html">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
