Updated NetisHR files

--- a/netishr/performance_evaluation_kpi.html
+++ b/netishr/performance_evaluation_kpi.html
@@ -274,7 +274,7 @@
                         <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                         <form role="search" class="navbar-form-custom" action="search_results.html">
                             <div class="form-group">
-                                <input type="text" placeholder="Cari..." class="form-control" name="top-search" id="top-search">
+                                <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
                             </div>
                         </form>
                     </div>
@@ -747,7 +747,7 @@
                                                                     <td>1</td>
                                                                     <td>January 1-March 31</td>
                                                                     <td>
-                                                                        25
+                                                                        25  
                                                                     </td>
                                                                     <td>10</td>
                                                                     <td>
@@ -1364,10 +1364,6 @@
 
                 $(".netis_competency_btn").click(function () {
                     alert("Open page Competency");
-                });
-
-                $('.chosen-select').chosen({
-                    width: "100%"
                 });
             </script>
 
