--- a/netishr/accountability_matrix_oldest.html
+++ b/netishr/accountability_matrix_oldest.html
@@ -38,8 +38,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="">Account</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="myaccount.html">Account</a></li>
+                                <li><a href="mysettings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -50,21 +50,12 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
+                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Main</span></a>
                     </li>
-                    <li class="active">
-                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
+                    <li>
+                        <a href="index.html"><i class="fa fa-sitemap"></i><span class="nav-label">Organization</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Level<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Branches</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Internal Groups</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -81,98 +72,92 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="org_charts.html">Charts</a></li>
+                            <li><a href="organisation_diagrams.html">Diagrams</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <a href="#"><i class="fa fa-suitcase"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
                             <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Competency Matrix</a>
+                                        <a href="competency_matrix.html">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
                             <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#">Workload Analysis</a></li>
+                            <li><a href="#"><span class="nav-label">Workload Analysis</span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li>
+                                        <a href="workloadanalysis_pic.html">PIC Assignment</a>
+                                    </li>
+                                    <li>
+                                        <a href="workload_calculation.html">Workload Calculation</a>
+                                    </li>
+                                </ul>
+                            </li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="persons.html">Persons</a></li>
+                        <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
+                            <li><a href="persons.html">Staffs</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="#">Manpower Planning</a></li>
-                            <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Applicants</a></li>
-                            <li><a href="#">Selection Process</a></li>
+                        <a href="#"><i class="fa fa-graduation-cap"></i><span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
+                            <li><a href="manpowerplanning.html">Manpower Planning</a></li>
+                            <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
+                            <li><a href="selectionprocess.html">Selection Process</a></li>
+                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
+                        <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
+                            <li><a href="performance_kpi_view.html">Indicators</a></li>
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Result Targets (KPI)</a>
+                                        <a href="performance_planning_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Process Targets (Competency)</a>
+                                        <a href="performance_planning_competency.html">Competency</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Coaching</a></li>
-                            <li><a href="#">Evidence</a></li>
+                            <li><a href="performance_coaching.html">Coaching</a></li>
+                            <li><a href="performance_evidence.html">Evidence</a></li>
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">Competency</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
                                 </ul>
                             </li>
-                            <li><a href="#">Performance Information</a></li>
+                            <li><a href="performance_information.html">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plan</a></li>
-                            <li><a href="#">Executed Training</a></li>
+                            <li><a href="#">Training Plans and Execution</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
                             <li><a href="#">Talent Pool</a></li>
@@ -182,31 +167,22 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <a href="#"><i class="fa fa-usd"></i><span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
+                                        <a href="mycalendar.html">My Calendar</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Work Shifts</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">General Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Overtimes</a>
                                     </li>
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
                                     <li>
                                         <a href="#">Business Trips</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance</a>
                                     </li>
                                 </ul>
                             </li>
@@ -230,18 +206,18 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">Benefits <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">TBA</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">TBA</a>
-                                    </li>
-                                </ul>
-                            </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="administrator.html"><i class="fa fa-sliders"></i><span class="nav-label">Administrator</span></a>
+                    </li>
+                    <!-- This menu below is to be accessed only by site manager -->
+                    <li>
+                        <a href="site_management.html"><i class="fa fa-columns"></i><span class="nav-label">Site Management</span></a>
+                    </li>
+                    <!-- This menu below is to be accessed only by system manager -->
+                    <li>
+                        <a href="system_management.html"><i class="fa fa-database"></i><span class="nav-label">System Management</span></a>
                     </li>
 
 
@@ -249,8 +225,7 @@
 
             </div>
         </nav>
-
-        <div id="page-wrapper" class="gray-bg">
+        <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
