--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -116,7 +116,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-graduation-cap"></i><span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
@@ -127,20 +127,7 @@
                     <li>
                         <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_kpi_view.html">KPIs</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">OKRs</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_bsc.html">BSCs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
+                            <li><a href="performance_kpi_view.html">Indicators</a></li>
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -167,7 +154,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
@@ -176,7 +163,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-md"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
@@ -187,7 +174,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-usd"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-usd"></i><span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
@@ -198,17 +185,6 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <!--
-<li>
-                                <a href="#">Leaves</a>
-                            </li>
-                            <li>
-                                <a href="#">Overtimes</a>
-                            </li>
-                            <li>
-                                <a href="#">Attendances</a>
-                            </li>
--->
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
@@ -256,7 +232,6 @@
 
             </div>
         </nav>
-
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -498,13 +473,18 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="performance_mgmt_periods.html">Settings</a>
+                                        <div><a href="administrator_performance_settings.html">Settings</a>
                                             <div class="small">Various settings for Performance</div>
                                         </div>
                                         <p></p>
                                         <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
                                             <div class="small">Manage performance management periods</div>
                                         </div>
+                                        <p></p>
+                                        <div><a href="administrator_performance_evaluation.html">Performance Evaluation Settings</a>
+                                            <div class="small">Rules for achievement percentages, results and rating</div>
+                                        </div>
+
 
                                     </div>
                                 </div>
