--- a/netishr/job_clans.html
+++ b/netishr/job_clans.html
@@ -109,7 +109,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-graduation-cap"></i><span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
@@ -120,20 +120,7 @@
                     <li>
                         <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_kpi_view.html">KPIs</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">OKRs</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_bsc.html">BSCs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
+                            <li><a href="performance_kpi_view.html">Indicators</a></li>
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -160,7 +147,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
@@ -169,7 +156,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-md"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
@@ -180,7 +167,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-usd"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-usd"></i><span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
@@ -191,17 +178,6 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <!--
-<li>
-                                <a href="#">Leaves</a>
-                            </li>
-                            <li>
-                                <a href="#">Overtimes</a>
-                            </li>
-                            <li>
-                                <a href="#">Attendances</a>
-                            </li>
--->
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
@@ -249,8 +225,7 @@
 
             </div>
         </nav>
-
-        <div id="page-wrapper" class="gray-bg">
+        <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
