--- a/netishr/organisation_units.html
+++ b/netishr/organisation_units.html
@@ -103,7 +103,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-graduation-cap"></i><span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
@@ -114,20 +114,7 @@
                     <li>
                         <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_kpi_view.html">KPIs</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">OKRs</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_bsc.html">BSCs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
+                            <li><a href="performance_kpi_view.html">Indicators</a></li>
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -154,7 +141,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
@@ -163,7 +150,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-md"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
@@ -174,7 +161,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-usd"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-usd"></i><span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
@@ -185,17 +172,6 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <!--
-<li>
-                                <a href="#">Leaves</a>
-                            </li>
-                            <li>
-                                <a href="#">Overtimes</a>
-                            </li>
-                            <li>
-                                <a href="#">Attendances</a>
-                            </li>
--->
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
@@ -243,8 +219,7 @@
 
             </div>
         </nav>
-
-        <div id="page-wrapper" class="gray-bg">
+        <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
