--- a/netishr/performance_evaluation_kpi.html
+++ b/netishr/performance_evaluation_kpi.html
@@ -119,34 +119,21 @@
                         <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="persons.html">Staffs</a></li>
-                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-graduation-cap"></i><span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="#">Manpower Planning</a></li>
-                            <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Selection Process</a></li>
+                            <li><a href="manpowerplanning.html">Manpower Planning</a></li>
+                            <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
+                            <li><a href="selectionprocess.html">Selection Process</a></li>
+                            <li><a href="applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_kpi_view.html">KPIs</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">OKRs</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_bsc.html">BSCs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
+                            <li><a href="performance_kpi_view.html">Indicators</a></li>
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -162,22 +149,18 @@
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                        <a href="performance_evaluation_kpi.html">Competency</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
                                 </ul>
                             </li>
-                            <li><a href="#">Performance Information</a></li>
+                            <li><a href="performance_information.html">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
@@ -186,7 +169,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-md"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
@@ -197,7 +180,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-usd"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-usd"></i><span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
@@ -208,17 +191,6 @@
                                     <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <!--
-<li>
-                                <a href="#">Leaves</a>
-                            </li>
-                            <li>
-                                <a href="#">Overtimes</a>
-                            </li>
-                            <li>
-                                <a href="#">Attendances</a>
-                            </li>
--->
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
@@ -266,7 +238,6 @@
 
             </div>
         </nav>
-
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -433,8 +404,10 @@
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <!-- Get this data Settings (mysettings.html) -->
-                                                <div>
-                                                    <label class="control-label">Performance Management Period</label>: January 1, 2016 - December 31, 2016</div>
+                                                <!-- Get this data Settings (mysettings.html) -->
+                                                <!-- Get this data Settings (mysettings.html) -->
+                                                <label class="control-label">Performance Management Period:</label>&nbsp;&nbsp; January 1, 2016 - December 31, 2016
+                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newevidence">Change period</button>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -747,7 +720,7 @@
                                                                     <td>1</td>
                                                                     <td>January 1-March 31</td>
                                                                     <td>
-                                                                        25  
+                                                                        25
                                                                     </td>
                                                                     <td>10</td>
                                                                     <td>
