Updated NetisHR files

--- a/netishr/performance_information.html
+++ b/netishr/performance_information.html
@@ -637,20 +637,25 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-4 m-b-xs">
+                                    <div class="col-sm-5">
                                         <div data-toggle="buttons" class="btn-group">
                                             <label class="btn btn-sm btn-white">
                                                 <input type="radio" id="option1" name="options"> All </label>
                                             <label class="btn btn-sm btn-white active">
                                                 <input type="radio" id="option2" name="options"> Planning submitted </label>
                                             <label class="btn btn-sm btn-white">
-                                                <input type="radio" id="option3" name="options"> Evaluation done </label>
+                                                <input type="radio" id="option3" name="options"> All evaluations done </label>
                                         </div>
                                     </div>
                                     <div class="col-sm-3">
                                         <div class="input-group">
                                             <input type="text" placeholder="Search" class="input-sm form-control"> <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm btn-primary"> Go!</button> </span></div>
+                                        <button type="button" class="btn btn-sm btn-primary"> Go!</button> </span>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-3">
+                                        <button type="button" class="btn btn-sm btn-primary">Calculate rating</button>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -666,7 +671,7 @@
                                                         <th>Coaching</th>
                                                         <th>Evaluation</th>
                                                         <th>Total</th>
-                                                        <th>Overal Rating</th>
+                                                        <th>Overall Rating</th>
                                                         <th>Score Details</th>
                                                         <th></th>
                                                     </tr>
