Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -209,7 +209,7 @@
                                 <a href="#">Payroll <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Salary Entry</a>
+                                        <a href="payroll_salary_entry.html">Salary Entry</a>
                                     </li>
                                     <li>
                                         <a href="#">Tax Calculation</a>
@@ -244,6 +244,7 @@
 
             </div>
         </nav>
+
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
