--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 *
 *  INSPINIA - Responsive Admin Theme
 *  version 2.6.2
@@ -546,7 +546,21 @@
                                             <div class="small">Assign payset and payslip to a person</div>
                                         </div>
                                     </div>
-
+                                </div>
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Administration</h5>
+                                        <div class="ibox-tools">
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div>
+                                            <a href="administrator_shift_settings.html">Settings</a>
+                                            <div class="small">Various settings for Shift</div>
+                                        </div>
+                                        Personnel Administration
+                                        <br> Work Shift
+                                    </div>
                                 </div>
 
                             </div>
